# nemo_hf_uploader

./: .gitignore  README.md  compose.yaml  config_default.yaml  pyproject.toml
conf/: config_default.yaml
docker/: Dockerfile
src/: readme_template.py  uploader.py
