[tool.poetry]
name = "nemo-asr-hf-uploader"
version = "0.1.0"
description = ""
authors = ["kittchy <kinouchi.takahiro.tg@tut.jp>"]
readme = "README.md"
packages = [{include = "nemo_asr_hf_uploader"}]

[tool.poetry.dependencies]
python = "^3.8"
text-unidecode = "^1.3"
huggingface-hub = "^0.19.4"
evaluate = "^0.4.1"
classopt = "^0.2.1"
loguru = "^0.7.2"
omegaconf = "^2.3.0"
cython = "^3.0.6"
youtokentome = {git = "https://github.com/LahiLuk/YouTokenToMe.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
